--- a/yadisk-client/package.json
+++ b/yadisk-client/package.json
@@ -7,7 +7,11 @@
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@material-ui/icons": "latest",
+    "@material-ui/core": "latest",
+    "@material-ui/core": "latest",
+    "@material-ui/core": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
