--- a/yadisk-client/package.json
+++ b/yadisk-client/package.json
@@ -10,8 +10,7 @@
     "redux-thunk": "^2.3.0",
     "@material-ui/icons": "latest",
     "@material-ui/core": "latest",
-    "@material-ui/core": "latest",
-    "@material-ui/core": "latest"
+    "react-router": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4"
